# rust-workshop-homework-solutions

./: README.md  notes.txt
.github/workflows/: ci.yml
bft/: Cargo.toml
bft/bft_interp/: Cargo.toml
bft/bft_interp/src/: lib.rs  machine.rs  newline_wrap.rs
bft/bft_types/: Cargo.toml
bft/bft_types/src/: instruction.rs  lib.rs  program.rs
bft/programs/: numwarp.bf  unclosed_bracket.bf  unopened_bracket.bf
bft/src/: cli.rs  main.rs
s1p1/: Cargo.toml
s1p1/src/: main.rs
s1p1/test_data/: empty_lines  letters  out_of_range
s1p2/: Cargo.toml
s1p2/src/: main.rs
s2p1/: Cargo.toml
s2p1/src/: main.rs  student.rs
s2p2/: Cargo.toml
s2p2/src/: brainfuck.rs  main.rs
